--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "mvc_design",
+  "name": "burger",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rtirabassi1994/burger.git"
   },
   "author": "",
   "license": "ISC",
